--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
-    "mysql2": "^3.12.0"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
+    "node-html-parser": "^7.0.1",
+    "uuid-v4": "^0.1.0"
   }
 }
