--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "node-html-parser": "^7.0.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "uuid-v4": "^0.1.0"
   }
 }
